initial game nav2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,10 +40,9 @@ nav:
     - Getting Started:
       - Before You Play:
       - Starting the Game:
-    Game Stages:
+    - Game Stages:
       - The Hangar:
       - Space Exploration:
       - Combat: game/combat_index.md
       - Racing:
     - In-Game Help:
-
